--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "name": "m6-abp_4",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
